Fixed spacing home page

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ margin-right: -20px;
 
 .slideshow {
 max-width: 100%;
-height: 90vh;
+height: 75vh;
 position: center;
 margin: 0px 0px 0px 0px;
 padding: 0px;
